layout issue fixed where welcomeBackground was leaving 1px gap between navbar and top of page

--- a/src/Hoc/Layout/Layout.module.css
+++ b/src/Hoc/Layout/Layout.module.css
@@ -5,5 +5,5 @@
 }
 
 .Content {
-  margin-top: -100px;
+  margin-top: -56px;
 }
