--- a/src/containers/Home/Home.module.css
+++ b/src/containers/Home/Home.module.css
@@ -1,4 +1,5 @@
 .WelcomeContainer {
+  margin: -100px 0 0 0;
   display: flex;
   height: 100vh;
   text-align: center;
